fix wrapping plugins, from showing up in the mw theme

--- a/app/assets/stylesheets/mw-runtime-base.scss
+++ b/app/assets/stylesheets/mw-runtime-base.scss
@@ -628,6 +628,10 @@ div.intra-page-nav {
     font-style: italic;
     font-size: 0.9em;
   }
+
+  &.hidden {
+    display: none;
+  }
 }
 
 .challenge {
